--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Confi-Impact</title>
 </head>
 <body>
-    /* CHOMAGE SECTION */
+    <!-- CHOMAGE SECTION !-->
     <style>
 	    .content {
 	            max-width: 800px;
@@ -35,6 +35,14 @@
 					<canvas id="myChart" ></canvas>
 				</div>
 			</div>
+		
+	<!--
+	Needed scripts in the head
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
+	!-->
 
 	<script>
 		var labels = [];
