--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confi-Impact</title>
-</head>
-<body>
-    <!-- CHOMAGE SECTION !-->
+<!-- CHOMAGE SECTION !-->
     <style>
 	    .content {
 	            max-width: 800px;
@@ -20,8 +16,25 @@
 	            height: 40px;
 	            border-radius: 8px;
             }
+			#chartdiv {
+		  width: 70%;
+		  height: 400px;
+		}
 	</style>
-	<section>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+	<script src="https://cdn.amcharts.com/lib/4/core.js"></script>
+	<script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
+	<script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
+	<script src="//www.amcharts.com/lib/4/themes/material.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	
+    <title>Confi-Impact</title>
+</head>
+<body>
+    
+
 			<div class="content">
 				<div class="toolbar">
 					<select name="age" id="age" onchange="ChangeChart()" class="ageSelect">
@@ -36,14 +49,66 @@
 				</div>
 			</div>
 		
-	<!--
-	Needed scripts in the head
+<script>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+am4core.ready(function() {
 
-	!-->
 
+	var chart = am4core.create("chartdiv", am4charts.XYChart);
+	
+	am4core.useTheme(am4themes_animated);
+	chart.dataSource.url = "https://raw.githubusercontent.com/IsmailBarkani/COD/master/JSON/PIB(1).json?token=AN64LFGWCMVYDV667PKEDX27PINS6";
+	chart.dataSource.parser = new am4core.JSONParser();
+	chart.dataSource.parser.options.emptyAs = 0;
+	
+  
+	let categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
+	categoryAxis.dataFields.category = "Time";
+	categoryAxis.title.text = "Trimestre";
+
+	let valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
+	valueAxis.title.text = "PIB Trimestriel en Milliard d'euros";
+
+	
+
+	var series2 = chart.series.push(new am4charts.LineSeries());
+	series2.name = "Units";
+	series2.stroke = am4core.color("#CDA2AB");
+	series2.strokeWidth = 3;
+	series2.dataFields.valueY = "PIB Trim";
+	series2.dataFields.categoryX = "Time";
+	series2.strokeWidth = 5;
+	series2.minBulletDistance = 10;
+	series2.tooltipText = "{valueY}";
+	series2.stroke = am4core.color("#6495ED");
+	series2.tooltip.pointerOrientation = "vertical";
+	series2.tooltip.background.cornerRadius = 20;
+	series2.tooltip.background.fillOpacity = 0.5;
+	series2.tooltip.label.padding(12,12,12,12);
+	//series2.defaultState.transitionDuration = 3000;
+	series2.hiddenState.transitionDuration = 3000;
+	series2.interpolationDuration = 5000;
+
+	chart.scrollbarX = new am4charts.XYChartScrollbar();
+	chart.scrollbarX.series.push(series2);
+
+	
+	chart.cursor = new am4charts.XYCursor();
+	//chart.cursor.xAxis = dateAxis;
+	chart.cursor.snapToSeries = series2;
+	chart.defaults.global.animationSteps = 600;
+	
+
+	chart.responsive.useDefault = false
+	chart.responsive.enabled = true;
+
+
+	
+});
+
+</script>
+<!-- HTML -->
+<div id="chartdiv"></div>
 	<script>
 		var labels = [];
 		var dataT = [];
@@ -187,7 +252,7 @@
 			myChart.update();
 			}
 			</script>
-    </section>
+	
     
 </body>
 </html>
